test/types/range/diten/rangecastbounds.low.good
rangecastbounds.chpl:15: error: cannot cast range from boundKind.both to boundKind.low
